--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="preload" as="image" href="/logo2.jpeg" />
+    <link rel="preload" as="image" href="/logo2.jpeg" importance="high" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Vite + React + TS</title>
   </head>
   <body>
