--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+      <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@200;500&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="preload" as="image" href="/logo2.jpeg" importance="high" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
